--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <h2>📧 Get Early Access</h2>
   <p>We’re in development! Sign up to get the free version when it's ready:</p>
-  <form action="https://YOUR_GOOGLE_FORM_URL" method="post" target="_blank">
+  <form action="https://github.com/pjeansonqc/SerialPortX/tree/main" method="post" target="_blank">
     <input type="email" name="email" placeholder="Your email" required style="padding:0.5em;" />
     <button type="submit" style="padding:0.5em;">Notify Me</button>
   </form>
