--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
       max-width: 700px;
     }
     h1 { font-size: 2em; }
-    input[type="email"] {
-      padding: 0.7em;
+    label {
+      display: block;
+      margin-top: 1em;
+      font-weight: bold;
+    }
+    input[type="text"],
+    input[type="email"],
+    textarea,
+    select {
+      width: 100%;
+      padding: 0.6em;
+      margin-top: 0.4em;
       font-size: 1em;
-      width: 70%;
       border: 1px solid #ccc;
       border-radius: 6px;
     }
@@ -26,14 +35,10 @@
       border: none;
       border-radius: 6px;
       cursor: pointer;
-      margin-left: 0.5em;
+      margin-top: 1em;
     }
     button:hover {
       background-color: #005fa3;
-    }
-    form {
-      margin-top: 1em;
-      margin-bottom: 2em;
     }
   </style>
 </head>
@@ -52,11 +57,10 @@
     <li>Offline + lightweight</li>
   </ul>
 
-  <h2>📧 Get Early Access</h2>
-  <p>We’re in development! Sign up to get the free version when it's ready:</p>
-
+  <h2>📧 Join the Early Access List + Help Us Build It</h2>
   <form action="https://formspree.io/f/xqaqakop" method="POST">
-     <label for="email">Your email (for early access)</label>
+
+    <label for="email">Your email (for early access)</label>
     <input type="email" id="email" name="email" placeholder="you@example.com" required />
 
     <label for="os">What OS do you use for development?</label>
@@ -91,7 +95,7 @@
     <button type="submit">Submit & Join List</button>
   </form>
 
-  <p style="font-size: 0.9em;">Built with ❤️ in C++/Qt by a developer who needed this tool himself.</p>
+  <p style="margin-top: 2em; font-size: 0.9em;">No spam. We’ll email you when the tool is ready for download. – Built by a fellow dev in Qt/C++.</p>
 
 </body>
 </html>
